--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ License: GPL (>= 2)
 Imports: Rcpp (>= 0.12.11)
 LinkingTo: Rcpp
 SystemRequirements: libaws-cpp-sdk-core, libaws-cpp-sdk-kms
+RoxygenNote: 6.0.1
